...
                    onClick = {
                        onLikedButtonClicked(id, favorite)
                    },
                    modifier = Modifier
                        .height(55.dp)
                        .weight(1f)
                        .testTag("likeButton")
                ) {
                    Icon(
                        imageVector = if(!favorite) Icons.Default.FavoriteBorder else Icons.Default.Favorite,
                        contentDescription = null ,
                        tint = if(!favorite) Color(0xFF236BFE) else Color(0xFFEF3F38),
                        modifier = Modifier
...
                        .fillMaxWidth()
                        .background(Color.Transparent)
                        .padding(vertical = 8.dp)
                        .padding(start = 10.dp)
                        .weight(1f)
                        .align(Alignment.CenterVertically)
                        .testTag("backButton")
                ) {
                    Icon(
                        imageVector = Icons.Default.ArrowBack ,
                        contentDescription = "backButton",
                        tint = Color(0xFFE8E9EB),
                        modifier = Modifier
...
