...
                        onClick = {
                            onLikedButtonClicked(id, favorite)
                        },
                        modifier = Modifier
                            .padding(end= 8.dp)
                            .size(30.dp)
                            .testTag("likeIconButton")
                    ) {
                        Icon(
                            imageVector = if(favorite) Icons.Default.Favorite else Icons.Default.FavoriteBorder,
                            contentDescription = null ,
                            tint = if(!favorite) Color(0xFF236BFE) else Color(0xFFEF3F38),
                            modifier = Modifier
...
